--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.6.1",
+    "formik": "^2.4.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.13.0",
-    "sort-by": "^1.2.0",
-    "styled": "^1.0.0"
+    "sort-by": "^0.0.2",
+    "styled": "^1.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.0",
