--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.6.1",
-    "axios": "^1.4.0",
-    "formik": "^2.4.2",
+    "@reduxjs/toolkit": "^1.9.7",
+    "antd": "^5.10.1",
+    "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
-    "react-redux": "^8.0.7",
-    "react-router-dom": "^6.13.0",
-    "sort-by": "^0.0.2",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "sort-by": "^1.2.0",
     "styled": "^1.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/node": "^20.3.0",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
+    "@types/node": "^20.8.6",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "@vitejs/plugin-react-swc": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.51.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "lightningcss": "^1.22.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11"
   }
 }
